syntax = "proto3";

option java_package = "clerk.examples";
option java_outer_classname = "ExampleProtos";

import "google/protobuf/timestamp.proto";

package clerk;

message MemorySnapshot {
  google.protobuf.Timestamp timestamp = 1;
  int64 total_memory = 2;
  int64 free_memory = 3;
}
